--- a/sass/abstracts/_fonts.scss
+++ b/sass/abstracts/_fonts.scss
@@ -1,2 +1,2 @@
-$primaryFont: "Libre Baskerville", serif;
-$secondaryFont: Arial, Helvetica, sans-serif;
+$primaryFont: "DM Serif Text", serif; // for headings
+$secondaryFont: "Roboto Flex", sans-serif; // for body text
