--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -10,6 +10,7 @@
   h2 {
     font-size: 1.8rem;
     margin: 1rem;
+    color: a.$mediumGray;
   }
 
   .clients {
@@ -39,6 +40,7 @@
           margin-top: 0.5rem;
           font-size: 1rem;
           font-weight: bold;
+          color: a.$mediumGray;
         }
       }
     }
