--- a/sass/components/_history.scss
+++ b/sass/components/_history.scss
@@ -2,13 +2,13 @@
 @use "../abstracts/mixins" as m;
 
 .history-header {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(a.$overlayDark, a.$overlayDark),
     url("../images/history-bg.jpg") no-repeat center center/cover;
 }
 
 .history-stories {
   padding: 2rem;
-  background-color: #300b0b;
+  background-color: #ffffff;
   color: white;
 
   .hero {
@@ -31,7 +31,7 @@
 
     h2 {
       text-align: center;
-      color: a.$primaryColor;
+      color: a.$mediumGray;
       margin-bottom: 2rem;
     }
   }
@@ -43,11 +43,16 @@
       gap: 1.5rem;
 
       .timeline-item {
-        background: rgba(255, 255, 255, 0.1);
+        background: a.$mediumGray;
         padding: 1.5rem;
         border-radius: 10px;
-        h3 {
-          color: a.$secondaryColor1;
+        h3,p {
+          color: a.$white;
+        }
+        p{
+          font-family: a.$secondaryFont;
+          font-weight: 200;
+          text-align: center;
         }
       }
     }
@@ -60,12 +65,19 @@
       gap: 1.5rem;
 
       .event-card {
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color:a.$mediumGray;
         padding: 1.5rem;
         border-radius: 10px;
         text-align: center;
-        h3 {
-          color: a.$secondaryColor2;
+        h3,p {
+          color: a.$white;
+        }
+        h3{
+          font-family: a.$primaryFont;
+        }
+        p{
+          font-family: a.$secondaryFont;
+          font-weight: 200;
         }
       }
     }
@@ -78,9 +90,14 @@
       gap: 1.5rem;
 
       .story-card {
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: a.$mediumGray;
         padding: 1.5rem;
         border-radius: 10px;
+        p{
+          font-family: a.$secondaryFont;
+          font-weight: 200;
+          color: a.$white;
+        }
         blockquote {
           font-style: italic;
           color: a.$accentColor;
@@ -96,9 +113,14 @@
       gap: 1.5rem;
 
       .letter-card {
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: a.$mediumGray;
         padding: 1.5rem;
         border-radius: 10px;
+        p{
+          font-family: a.$secondaryFont;
+          font-weight: 200;
+          color: a.$white;
+        }
       }
     }
   }
