--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -3,7 +3,10 @@
 
 .nav-con {
   width: 100%;
-  background-color: a.$accentColor2;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: a.$mediumGray;
 }
 
 nav {
@@ -20,17 +23,21 @@ nav {
     flex: 1;
     text-align: right;
     position: fixed;
-    background: #f44336;
+    background-color: rgba(0, 0, 0, 0.212);
+    backdrop-filter: blur(8px);
+   -webkit-backdrop-filter: blur(8px);
+    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
     height: 100vh;
     width: 200px;
     top: 0;
     right: -200px;
     text-align: left;
     z-index: 2;
-    transition: 1s;
+    transition: all 0.3s ease;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
 
     ul {
-      // padding: 30px;
+      // padding: 2rem 0;
 
       li {
         list-style: none;
@@ -39,16 +46,17 @@ nav {
         position: relative;
 
         a {
-          color: #fff;
+          color: a.$white;
           text-decoration: none;
           font-size: 14px;
+          font-family: a.$secondaryFont;
         }
 
         &::after {
           content: "";
           width: 0%;
           height: 2px;
-          background: #f44336;
+          background: a.$gold;
           display: block;
           margin: auto;
           transition: 0.05s;
@@ -63,7 +71,7 @@ nav {
 
   .fa {
     display: block;
-    color: #fff;
+    color: a.$white;
     margin: 10px;
     font-size: 22px;
     cursor: pointer;
@@ -78,10 +86,13 @@ nav {
       height: auto;
       width: auto;
       text-align: right;
+      box-shadow: none;
 
       ul {
+        
         li {
           display: inline-block;
+          
           a {
             font-size: 14px;
           }
