--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -14,6 +14,7 @@ nav {
   padding: 0% 4%;
   justify-content: space-between;
   align-items: center;
+  background-color: a.$mediumGray;
 
   img {
     width: 250px;
