--- a/sass/components/_victoriacrosses.scss
+++ b/sass/components/_victoriacrosses.scss
@@ -55,6 +55,10 @@
         border-radius: 8px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         transition: transform 0.2s ease;
+        @media screen and (min-width: 768px){
+          max-width: 30%;
+
+        }
 
         &:hover {
           transform: scale(1.05);
