--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -89,7 +89,7 @@
 
 .donate-button {
   display: inline-block;
-  margin-top: 2rem;
+  // margin-top: 2rem;
   padding: 0.875rem 2rem;
   background-color: a.$burgundy;
   color: a.$white;
