--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -21,8 +21,12 @@
   text-align: center;
 
   h1 {
-    color: a.$gold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    // color: a.$gold;
+    background: linear-gradient(to right, a.$burgundy, a.$gold, a.$offWhite);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    // text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     // margin-bottom: 1.5rem;
   }
 
@@ -59,8 +63,12 @@
   .header-content {
     h1 {
       margin-bottom: 1.5rem;
-      color: a.$gold;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      // color: a.$gold;
+      background: linear-gradient(to right, a.$burgundy, a.$gold, a.$offWhite);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      // text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
       // font-size: 2.5rem;
       font-family: a.$primaryFont;
     }
