--- a/sass/components/_history.scss
+++ b/sass/components/_history.scss
@@ -38,21 +38,27 @@
 
   .conflict-history {
     .timeline {
-      display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
+      // display: flex;
+      // flex-direction: column;
+      // gap: 1.5rem;
 
       .timeline-item {
-        background: a.$mediumGray;
+        background: a.$lightGray;
         padding: 1.5rem;
         border-radius: 10px;
-        h3,p {
-          color: a.$white;
+        h3,
+        p {
+          color: a.$navy;
         }
-        p{
+        p {
           font-family: a.$secondaryFont;
           font-weight: 200;
           text-align: center;
+        }
+        img {
+          width: 100%;
+          height: auto;
+          border-radius: 10px;
         }
       }
     }
@@ -65,19 +71,25 @@
       gap: 1.5rem;
 
       .event-card {
-        background-color:a.$mediumGray;
+        background-color: a.$lightGray;
         padding: 1.5rem;
         border-radius: 10px;
         text-align: center;
-        h3,p {
-          color: a.$white;
+        h3,
+        p {
+          color: a.$navy;
         }
-        h3{
+        h3 {
           font-family: a.$primaryFont;
         }
-        p{
+        p {
           font-family: a.$secondaryFont;
           font-weight: 200;
+        }
+        img {
+          width: 100%;
+          height: auto;
+          border-radius: 10px;
         }
       }
     }
@@ -90,13 +102,13 @@
       gap: 1.5rem;
 
       .story-card {
-        background-color: a.$mediumGray;
+        background-color: a.$lightGray;
         padding: 1.5rem;
         border-radius: 10px;
-        p{
+        p {
           font-family: a.$secondaryFont;
           font-weight: 200;
-          color: a.$white;
+          color: a.$navy;
         }
         blockquote {
           font-style: italic;
@@ -107,21 +119,56 @@
   }
 
   .soldier-letters {
-    .letters-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
+    .letter-card {
+      z-index: 2;
+      border-radius: 10px;
+      position: relative;
 
-      .letter-card {
-        background-color: a.$mediumGray;
-        padding: 1.5rem;
-        border-radius: 10px;
-        p{
-          font-family: a.$secondaryFont;
+      img {
+        width: 100%;
+        height: auto;
+        position: relative;
+        z-index: 1;
+      }
+      div {
+        position: absolute;
+        z-index: 2;
+        top: 0;
+        margin: 7% 10%;
+        h5 {
+          font-family: "Caveat", cursive;
+        }
+        p {
+          font-family: "Caveat", cursive;
           font-weight: 200;
-          color: a.$white;
+          // font-size: x-small;
+          color: a.$navy;
         }
       }
     }
+  }
+}
+
+@media (min-width: 625px) {
+  .letter-card div p {
+    font-size: large;
+  }
+}
+
+@media (min-width: 768px) {
+  .letter-card div p {
+    font-size: x-small;
+  }
+}
+
+@media (min-width: 925px) {
+  .letter-card div p {
+    font-size: small;
+  }
+}
+
+@media (min-width: 1280px) {
+  .letter-card div p {
+    font-size: 12.5px;
   }
 }
